istio/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-argocd
      protocol: HTTP
    hosts:
      - "argocd.chuchodavids.io"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-argocd
      protocol: HTTPS
    hosts:
      - argocd.chuchodavids.io
    tls:
      mode: SIMPLE
      credentialName: chuchodavids-io-cert
  - port:
      number: 80
      name: http-longhorn
      protocol: HTTP
    hosts:
      - "longhorn.chuchodavids.io"
